src/test/ui/consts/miri_unleashed/ptr_arith.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/ptr_arith.rs:9:14
   |
LL |     let _v = x == x;
   |              ^^^^^^ "pointer arithmetic or comparison" needs an rfc before being allowed inside constants

error[E0080]: could not evaluate static initializer
  --> $DIR/ptr_arith.rs:16:14
   |
LL |     let _v = x + 0;
   |              ^^^^^ "pointer-to-integer cast" needs an rfc before being allowed inside constants

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/ptr_arith.rs:9:14
   |
LL |     let _v = x == x;
   |              ^^^^^^
help: skipping check that does not even have a feature gate
  --> $DIR/ptr_arith.rs:15:20
   |
LL |     let x: usize = std::mem::transmute(&0);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
